feat: update OPEN CALL section to indicate that submissions are now closed

--- a/index.html
+++ b/index.html
@@ -214,14 +214,15 @@ font in use: Poppins, PicNic, and Inclusive Sans
     <div id="openopencall" class="openopencall">
       <div class="opencallframe">
         <div class="opencall-title">OPEN CALL</div>
+
         <div class="textcolumn">
           <div class="mobiledirection" id="zh"></div>
           <div class="column zh">
             <h2>歡迎來到 2025 草率季 - Soft POW 無限柔軟</h2>
             <p>
+              <span style="color: red">草率季2025徵件已截止！</span><br /><br />
               感謝您對草率季-台北藝術書展的支持，2025年第9屆草率季「Soft POW
-              無限柔軟
-              」徵件開始，在您繼續提交申請前，請耐心閱讀以下參展條件，申請即表示您已閱讀、了解並同意並接受。
+              無限柔軟」徵件開始，在您繼續提交申請前，請耐心閱讀以下參展條件，申請即表示您已閱讀、了解並同意並接受。
             </p>
             <br />
             <h3>書展資訊</h3>
@@ -326,6 +327,9 @@ font in use: Poppins, PicNic, and Inclusive Sans
               Welcome to the 2025 9th Annual Taipei Art Book Fair - Soft POW!
             </h2>
             <p>
+              <span style="color: red"
+                >Taipei Art Book Fair 2025 OPEN CALL is now closed!</span
+              ><br /><br />
               Thank you for your support—welcome aboard! Before you submit your
               application, please read the following terms carefully. By
               applying, you agree to abide by them.
