feat: update contact information fields in dashboard with new labels and structure

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -232,6 +232,30 @@
                         ><br /><span id="visa-requirement">Not Require</span>
                       </td>
                     </tr>
+                    <tr>
+                      <td>
+                        <span class="label">主要創作據點 Based at</span
+                        ><br /><span id="baselocation">🚧 讀取中…</span>
+                      </td>
+                      <td>
+                        <span class="label">Website</span><br />
+                        <span id="website">🚧 讀取中…</span>
+                      </td>
+                      <td>
+                        <span class="label">Instagram</span><br />
+                        <span id="instagram">🚧 讀取中…</span>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <span class="label">Facebook</span><br />
+                        <span id="facebook">🚧 讀取中…</span>
+                      </td>
+                      <td>
+                        <span class="label">Whatsapp</span><br />
+                        <span id="whatsapp">🚧 讀取中…</span>
+                      </td>
+                    </tr>
                   </table>
                 </td>
               </tr>
@@ -1061,7 +1085,7 @@
               <tr colspan="2" style="position: relative">
                 <!-- 左欄：代表人，一格佔 5 行 -->
                 <td rowspan="2">
-                  <span class="label">代表人 Contact Person</span><br />
+                  <span class="label">姓名 Name</span><br />
                   <div
                     style="
                       vertical-align: middle;
@@ -1097,32 +1121,6 @@
                     id="nationality2"
                     >🚧 讀取中…</span
                   >
-                </td>
-                <td>
-                  <span class="label">主要創作據點 Based at</span><br /><span
-                    id="baselocation"
-                    >🚧 讀取中…</span
-                  >
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <span class="label">Website</span><br />
-                  <span id="website">🚧 讀取中…</span>
-                </td>
-                <td>
-                  <span class="label">Instagram</span><br />
-                  <span id="instagram">🚧 讀取中…</span>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <span class="label">Facebook</span><br />
-                  <span id="facebook">🚧 讀取中…</span>
-                </td>
-                <td>
-                  <span class="label">Whatsapp</span><br />
-                  <span id="whatsapp">🚧 讀取中…</span>
                 </td>
               </tr>
             </table>
