feat: enhance dashboard with additional fields for attended years and social media links

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -201,6 +201,12 @@
                 </td>
               </tr>
               <tr>
+                <td colspan="2">
+                  <span class="label">過往參與年份 Years Attended</span
+                  ><br /><span id="attendedYears"></span>
+                </td>
+              </tr>
+              <tr>
                 <td colspan="2" style="padding: 0">
                   <table style="width: 100%; table-layout: fixed">
                     <tr>
@@ -232,31 +238,57 @@
                         ><br /><span id="visa-requirement">Not Require</span>
                       </td>
                     </tr>
-                    <tr>
-                      <td>
-                        <span class="label">主要創作據點 Based at</span
-                        ><br /><span id="baselocation">🚧 讀取中…</span>
-                      </td>
-                      <td>
-                        <span class="label">Website</span><br />
-                        <span id="website">🚧 讀取中…</span>
-                      </td>
-                      <td>
-                        <span class="label">Instagram</span><br />
-                        <span id="instagram">🚧 讀取中…</span>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <span class="label">Facebook</span><br />
-                        <span id="facebook">🚧 讀取中…</span>
-                      </td>
-                      <td>
-                        <span class="label">Whatsapp</span><br />
-                        <span id="whatsapp">🚧 讀取中…</span>
-                      </td>
-                    </tr>
                   </table>
+                </td>
+              </tr>
+              <tr>
+                <td colspan="2">
+                  <span class="label">主要創作據點 Based at</span><br /><span
+                    id="baselocation"
+                  ></span>
+                </td>
+              </tr>
+              <tr>
+                <td colspan="2">
+                  <span class="label">Website</span><br />
+                  <span id="website"></span>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <span class="label">Instagram</span><br />
+                  <span id="instagram"></span>
+                </td>
+                <td>
+                  <span class="label">Facebook</span><br />
+                  <span id="facebook"></span>
+                </td>
+              </tr>
+              <tr>
+                <td colspan="2">
+                  <span class="label">無限柔軟是 Soft POW is…..(50字內）</span
+                  ><br />
+                  <span id="yearlyanswer"></span>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <span class="label">電力需求 Electricity Requirement</span
+                  ><br />
+                  <span id="electricity-regulation">
+                    請務必詳列設備名稱與瓦數，<br />範例如下：<br />
+                    微波爐：1100W<br />
+                    電扇：65W<br />
+                    熱水壺：1500W<br /><br />
+                    📌
+                    未事先申報之電器不得於現場使用，如於現場發現並屢勸不聽，將依《罰金手冊》規定處以罰款。<br />
+                    📌 如需使用 220V 電壓，將酌收費用
+                    NT$1000，並請於表單中註明。（
+                    為維護安全，請勿使用變壓器，主辦單位不提供電壓轉換服務）
+                  </span>
+                </td>
+                <td>
+                  <span id="electricity-answer"></span>
                 </td>
               </tr>
             </table>
