fix: remove loading text placeholders for contact information in dashboard

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1400,9 +1400,7 @@
                       line-height: 2rem;
                     "
                   >
-                    <span style="font-size: 2rem" id="contact-person"
-                      >🚧 讀取中…</span
-                    >
+                    <span style="font-size: 2rem" id="contact-person"></span>
                   </div>
                 </td>
 
@@ -1410,24 +1408,21 @@
                 <td>
                   <span class="label">聯絡信箱 Contact Email</span><br /><span
                     id="email"
-                    >🚧 讀取中…</span
-                  >
+                  ></span>
                 </td>
               </tr>
               <tr>
                 <td>
                   <span class="label">聯絡電話 Contact Phone</span><br /><span
                     id="phone"
-                    >🚧 讀取中…</span
-                  >
+                  ></span>
                 </td>
               </tr>
               <tr>
                 <td>
                   <span class="label">國籍 Nationality</span><br /><span
                     id="nationality2"
-                    >🚧 讀取中…</span
-                  >
+                  ></span>
                 </td>
               </tr>
             </table>
@@ -1480,7 +1475,7 @@
                 </tr>
 
                 <tr>
-                  <td>
+                  <td colspan="2">
                     <span class="label">國籍 Nationality</span><br />
                     <select id="nationality-edit">
                       <option>Please select your nationality</option>
