--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -271,7 +271,7 @@
                   <span id="yearlyanswer"></span>
                 </td>
               </tr>
-              <tr style="background-color: #fff5ee">
+              <tr id="electricity-row" style="background-color: #fff5ee">
                 <td>
                   <span class="label">電力需求 Electricity Requirement</span
                   ><br />
@@ -748,7 +748,7 @@
                     ></textarea>
                   </td>
                 </tr>
-                <tr>
+                <tr id="edit-electricity-row">
                   <td colspan="2">
                     <span class="label">電力需求 Electricity Requirement</span
                     ><br />
