fix: update loading mask visibility and fetch user account information

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -35,7 +35,7 @@
     <script src="js/edit-profile.js"></script>
   </head>
   <body>
-    <div id="loading-mask">
+    <div id="loading-mask" style="display: flex">
       <div class="loading-grid"></div>
       <div class="loading-percent" id="loading-percent">0%</div>
     </div>
