fix: update schedule labels and dates in dashboard, enhance user data logging in dashboard script, and localize Instagram label in profile editing

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1313,31 +1313,56 @@
                     <tr>
                       <td>
                         <span class="rotated" id="schedule-announce"
-                          >徵件開始<br />Open Call Announce</span
+                          >徵件開始<br />Open Call Start</span
                         >
                       </td>
                       <td>
                         <span class="rotated" id="schedule-out"
-                          >徵件結束<br />Open Call is out</span
+                          >徵件截止<br />Open Call End</span
                         >
                       </td>
                       <td>
                         <span class="rotated" id="schedule-result"
-                          >錄取結果出爐<br />Open Call Result</span
+                          >審核結果通知<br />Result Notification</span
                         >
                       </td>
                       <td>
-                        <span class="rotated" id="schedule-update"
-                          >報名狀態更新後聯繫確認<br />Application status
-                          update</span
+                        <span class="rotated" id="schedule-payment"
+                          >通過者付款截止<br />Payment Deadline</span
+                        >
+                      </td>
+                      <td>
+                        <span class="rotated" id="schedule-runnerup"
+                          >備取名單通知<br />Runner-up Notification</span
+                        >
+                      </td>
+                      <td>
+                        <span class="rotated" id="schedule-runnerup-payment"
+                          >備取付款截止<br />Runner-up Payment Deadline</span
+                        >
+                      </td>
+                      <td>
+                        <span class="rotated" id="schedule-list"
+                          >公布參展名單<br />Exhibitor List</span
+                        >
+                      </td>
+                      <td>
+                        <span class="rotated" id="schedule-booth"
+                          >攤位位置公布<br />Booth Location</span
                         >
                       </td>
                     </tr>
                     <tr>
-                      <td id="schedule-date-announce">05/01</td>
-                      <td id="schedule-date-out">06/15</td>
-                      <td id="schedule-date-result">06/30</td>
-                      <td id="schedule-date-update">06/30</td>
+                      <td id="schedule-date-announce">2024/5/5（日）</td>
+                      <td id="schedule-date-out">2024/6/15（日）24:00</td>
+                      <td id="schedule-date-result">2024/6/30（一）12:00</td>
+                      <td id="schedule-date-payment">2024/7/13（日）24:00</td>
+                      <td id="schedule-date-runnerup">2024/7/16（三）24:00</td>
+                      <td id="schedule-date-runnerup-payment">
+                        2024/7/22（二）24:00
+                      </td>
+                      <td id="schedule-date-list">2024/9月</td>
+                      <td id="schedule-date-booth">2024/11/20（四）</td>
                     </tr>
                   </table>
                 </td>
