fix: adjust font size in qualification notice for better alignment in dashboard

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -838,7 +838,7 @@
                       </td>
                       <!-- 資格勾勾 -->
                       <td style="width: 30%">
-                        <div style="vertical-align: middle; font-size: 2rem">
+                        <div style="vertical-align: middle">
                           經確認完成繳費動作＆同意書上傳，才算是取得最終參展資格，團隊將於
                           7 月 15 日核對後進行統一更新。
                           <label
