fix: adjust booth number display styles and enhance registration status text based on booth language

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -787,7 +787,7 @@
             <table width="100%">
               <tr>
                 <!-- 攤商編號 -->
-                <td>
+                <td style="border-right: 2px solid black">
                   <span class="label">攤商編號 Booth Number</span><br />
                   <div style="vertical-align: middle; font-size: 2.7rem">
                     <span
@@ -812,7 +812,7 @@
                   <table style="width: 100%; table-layout: auto">
                     <tr style="padding: 0; border: none">
                       <!-- 參展資格 -->
-                      <td style="width: 40%">
+                      <td style="width: 20%">
                         <span class="label">參展資格 Exhibitor Status</span
                         ><br />
                         <div style="vertical-align: middle; font-size: 2.7rem">
@@ -837,7 +837,7 @@
                         </div>
                       </td>
                       <!-- 資格勾勾 -->
-                      <td style="width: 30%">
+                      <td style="width: 80%">
                         <div style="vertical-align: middle">
                           經確認完成繳費動作＆同意書上傳，才算是取得最終參展資格，團隊將於
                           7 月 15 日核對後進行統一更新。
