fix: adjust exhibitor status display logic and improve visibility of related elements in dashboard

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -812,7 +812,7 @@
                   <table style="width: 100%; table-layout: auto">
                     <tr style="padding: 0; border: none">
                       <!-- 參展資格 -->
-                      <td style="width: 20%">
+                      <td style="width: 30%; border-right: 1px dashed black">
                         <span class="label">參展資格 Exhibitor Status</span
                         ><br />
                         <div style="vertical-align: middle; font-size: 2.7rem">
@@ -837,7 +837,7 @@
                         </div>
                       </td>
                       <!-- 資格勾勾 -->
-                      <td style="width: 80%">
+                      <td style="width: 70%">
                         <div style="vertical-align: middle">
                           經確認完成繳費動作＆同意書上傳，才算是取得最終參展資格，團隊將於
                           7 月 15 日核對後進行統一更新。
@@ -845,8 +845,7 @@
                             style="
                               display: flex;
                               align-items: center;
-                              font-size: 1.1rem;
-                              margin-bottom: 0.5em;
+                              font-size: 1rem;
                             "
                           >
                             <input
@@ -861,7 +860,7 @@
                             style="
                               display: flex;
                               align-items: center;
-                              font-size: 1.1rem;
+                              font-size: 1rem;
                             "
                           >
                             <input
