--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -205,6 +205,21 @@
                   </ul>
                   <br />
                 </td>
+                <td>
+                  <span id="electricity-title">電源配置：</span>
+                  <ul
+                    style="
+                      margin: 0 0 1em 1.5em;
+                      padding: 0;
+                      list-style-type: disc;
+                      font-size: 1em;
+                    "
+                  >
+                    <li>供應一般電源110v</li>
+                    <li>不得使用大電器</li>
+                    <li>非每攤都有，需自備延長線與他人協調</li>
+                  </ul>
+                </td>
               </tr>
               <!-- 編輯按鈕 -->
               <tr style="background-color: black; text-align: right">
