fix: adjust table layout and improve electricity configuration display

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -158,6 +158,7 @@
               <tr>
                 <!-- 左邊：攤種區塊 -->
                 <td
+                  colspan="2"
                   style="
                     width: 25%;
                     border-top: 0.5px solid pink;
@@ -204,8 +205,6 @@
                     </li>
                   </ul>
                   <br />
-                </td>
-                <td>
                   <span id="electricity-title">電源配置：</span>
                   <ul
                     style="
@@ -958,7 +957,19 @@
                 >
                   <table style="width: 100%; table-layout: auto">
                     <tr></tr>
-                    <tr id="agreement-row">
+                    <tr
+                      id="agreement-row"
+                      style="
+                        width: 25%;
+                        border-top: 0.5px solid pink;
+                        border-bottom: 0.5px solid pink;
+
+                        margin: 6px 0;
+                        border-left: 1px solid black;
+
+                        vertical-align: top;
+                      "
+                    >
                       <td colspan="3" style="padding: 0; border: none">
                         <div style="padding: 1em 0 1em 1em">
                           <span class="label"
