fix: restructure equipment and electricity configuration display for improved layout

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -191,33 +191,51 @@
                       border-bottom: none;
                     "
                   />
-                  <span id="equipment-title">基礎設備：</span>
-                  <ul
-                    style="list-style-type: none; margin: 0; padding-left: 0em"
-                  >
-                    <li id="equipment-table">
-                      – 桌面<small>(120×60cm)</small> ×1
-                    </li>
-                    <li id="equipment-chair">– 椅子 ×2</li>
-                    <li id="equipment-badge">– 工作證 ×2</li>
-                    <li id="equipment-book">
-                      – 草率簿 ×1<small> (含露出一面)</small>
-                    </li>
-                  </ul>
-                  <br />
-                  <span id="electricity-title">電源配置：</span>
-                  <ul
-                    style="
-                      margin: 0 0 1em 1.5em;
-                      padding: 0;
-                      list-style-type: disc;
-                      font-size: 1em;
-                    "
-                  >
-                    <li>供應一般電源110v</li>
-                    <li>不得使用大電器</li>
-                    <li>非每攤都有，需自備延長線與他人協調</li>
-                  </ul>
+
+                  <table style="width: 100%">
+                    <tr>
+                      <td
+                        style="
+                          vertical-align: top;
+                          padding-right: 2em;
+                          border: none;
+                        "
+                      >
+                        <span id="equipment-title">基礎設備：</span>
+                        <ul
+                          style="
+                            list-style-type: none;
+                            margin: 0;
+                            padding-left: 0em;
+                          "
+                        >
+                          <li id="equipment-table">
+                            – 桌面<small>(120×60cm)</small> ×1
+                          </li>
+                          <li id="equipment-chair">– 椅子 ×2</li>
+                          <li id="equipment-badge">– 工作證 ×2</li>
+                          <li id="equipment-book">
+                            – 草率簿 ×1<small> (含露出一面)</small>
+                          </li>
+                        </ul>
+                      </td>
+                      <td style="vertical-align: top; border: none">
+                        <span id="electricity-title">電源配置：</span>
+                        <ul
+                          style="
+                            margin: 0 0 1em 1.5em;
+                            padding: 0;
+                            list-style-type: disc;
+                            font-size: 1em;
+                          "
+                        >
+                          <li>供應一般電源110v</li>
+                          <li>不得使用大電器</li>
+                          <li>非每攤都有，需自備延長線與他人協調</li>
+                        </ul>
+                      </td>
+                    </tr>
+                  </table>
                 </td>
               </tr>
               <!-- 編輯按鈕 -->
