fix: rename equipment info to billing info for clarity in dashboard

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -961,7 +961,7 @@
                 </td>
               </tr>
 
-              <tr id="equipmentinfo" style="display: block">
+              <tr id="billing-info" style="display: block">
                 <td></td>
                 <td
                   colspan="3"
